Add new light dining room and appleTV remote
Add new light: Window light dining room
Clean up configuration
Custom icons for some entities
Update script to work with new name of SVT channel (due to channel shift)
Fix that "Lilla västhuset" sensor had changed ID
Add Apple TV remote integration and remote card to lovelace
Clean up lovelace to save some vertical space

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,14 +55,6 @@ webostv:
           - LiveTV
           - Onkyo
 
-#sector_alarm:
-#  email: !secret sec_username
-#  password: !secret sec_password
-#  alarm_id: !secret sec_alarm_id
-#  code: <Your pin code to asm/disarm, optional>
-#  thermometers: false
-#  alarm_panel: true
-
 wake_on_lan:
 
 #influxdb:
@@ -96,7 +88,7 @@ homekit:
   entity_config:
     alarm_control_panel.home:
       code: !secret sec_alarm_code
-      
+
 # Google Assistant integration
 google_assistant:
   project_id: !secret google_assistant_proj_id
@@ -146,6 +138,7 @@ hassio:
 
 shelly:
   discovery: true  #add all devices (default)
+  version: true
   username: !secret shelly_username
   password: !secret shelly_password
   sensors: #sensors to show, can be override on each device
