--- a/groups.yaml
+++ b/groups.yaml
@@ -55,6 +55,7 @@ diningroom_lights:
   entities:
     - light.bordslampa
     - light.vitrine_diningroom
+    - light.window_light_dining_room
     
 livingroom_lights:
   name: Vardagsrum
