--- a/sensors.yaml
+++ b/sensors.yaml
@@ -84,8 +84,8 @@
      - id: 151
        name: Garage
      - id: 167
-       name: Växthus
-     - id: 156
+       name: Lilla växthuset
+     - id: 160
        name: Framsida
      - id: 199
        name: Vind väster
