Add x-mas lights, energy sensor and some  clean-up
Since there has been a ling time since the previous commit
this commit contains a lot of changes:

- Big change: Add energy sensors and corresponding cards in lovelace
- Add christmas lights templates
- Clean up some unused sensors
- Change Adax from custom integration to the official one

--- a/automations.yaml
+++ b/automations.yaml
@@ -460,3 +460,16 @@
       entity_id:
       - group.interior_lights
     service: light.turn_off
+- id: '1640075647638'
+  alias: Keep Tuya Alive
+  description: Keep tuya alive-reload every 30 minutes
+  trigger:
+  - platform: time_pattern
+    minutes: /30
+  condition: []
+  action:
+  - service: homeassistant.reload_config_entry
+    target:
+      entity_id:
+      - switch.eluttag_framsidan
+  mode: single
