--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,10 +17,9 @@ binary_sensor:
     country: SE
     days_offset: 1
     
-climate:
-  - platform: adax
-    account_id: !secret adax_account_id # replace with your account ID (see Adax WiFi app, Account Section)
-    password: !secret adax_password # replace with your remote user password (see Adax WiFi app, Account Section)
+google:
+  client_id: !secret googleCal_client_id
+  client_secret: !secret googleCal_client_secret
 
 media_player:
   - platform: onkyo
@@ -168,6 +167,18 @@ homeassistant:
   customize: !include customize.yaml
   external_url: !secret external_url
   
+energy:
+
+utility_meter:
+  grid_consumption_energy_daily:
+    source: sensor.energy_usage
+    cycle: daily
+    name: Daily energy
+  grid_consumption_energy_monthly:
+    source: sensor.energy_usage
+    cycle: monthly
+    name: Monthly energy
+
 #hacs:
 #  token: !secret hacs_token
 
@@ -182,6 +193,8 @@ zone:
 # Enables the frontend
 frontend:
   themes: !include themes.yaml
+  extra_module_url:
+    - /hacsfiles/lovelace-card-mod/card-mod.js
 
 # Enables configuration UI
 config:
