--- a/lights.yaml
+++ b/lights.yaml
@@ -18,15 +18,15 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.vitrinskap_switch
-    growing_light_storage:
-      friendly_name: "Växtbelysning förråd"
-      value_template: '{{ states.switch.vaxtbelysning_forrad.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.vaxtbelysning_forrad
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.vaxtbelysning_forrad
+#    growing_light_storage:
+#      friendly_name: "Växtbelysning förråd"
+#      value_template: '{{ states.switch.vaxtbelysning_forrad.state }}'
+#     turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.vaxtbelysning_forrad
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.vaxtbelysning_forrad
     light_terrace:
       friendly_name: "Ljusslinga altan"
       value_template: '{{ states.switch.ljusslinga_altan.state }}'
@@ -45,15 +45,15 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.uttag4
-#    window_light_dining_room:
-#      friendly_name: "Fönsterlampa Matsal"
-#      value_template: '{{ states.switch.uttag3.state }}'
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.uttag3
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.uttag3
+    window_light_dining_room:
+      friendly_name: "Fönsterlampa Matsal"
+      value_template: '{{ states.switch.shelly_plug_1.state }}'
+      turn_on:
+        service: switch.turn_on
+        entity_id: switch.shelly_plug_1
+      turn_off:
+        service: switch.turn_off
+        entity_id: switch.shelly_plug_1
     xmas_light_front:
       friendly_name: "Julbelysning framsida"
       value_template: '{{ states.switch.julbelysning_framsida.state }}'
@@ -63,51 +63,51 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.julbelysning_framsida
-    xmas_tree:
-      friendly_name: "Julgran"
-      value_template: '{{ states.switch.julgran.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.julgran
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.julgran
-    candelabra_kitchen:
-      friendly_name: "Ljusstake kök"
-      value_template: '{{ states.switch.uttag3.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.uttag3
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.uttag3
-    candelabra_living_room:
-      friendly_name: "Ljusstake vardagsrum"
-      value_template: '{{ states.switch.shelly_plug_2.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.shelly_plug_2
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.shelly_plug_2
-    candelabra_dining_room:
-      friendly_name: "Ljusstake matsal"
-      value_template: '{{ states.switch.shelly_plug_1.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.shelly_plug_1
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.shelly_plug_1
-    candelabra_bedroom:
-      friendly_name: "Ljusstake sovrum"
-      value_template: '{{ states.switch.uttag6.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.uttag6
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.uttag6
+#    xmas_tree:
+#      friendly_name: "Julgran"
+#      value_template: '{{ states.switch.julgran.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.julgran
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.julgran
+#    candelabra_kitchen:
+#      friendly_name: "Ljusstake kök"
+#      value_template: '{{ states.switch.uttag3.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag3
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag3
+#    candelabra_living_room:
+#      friendly_name: "Ljusstake vardagsrum"
+#      value_template: '{{ states.switch.shelly_plug_2.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.shelly_plug_2
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.shelly_plug_2
+#    candelabra_dining_room:
+#      friendly_name: "Ljusstake matsal"
+#      value_template: '{{ states.switch.shelly_plug_1.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.shelly_plug_1
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.shelly_plug_1
+#    candelabra_bedroom:
+#      friendly_name: "Ljusstake sovrum"
+#      value_template: '{{ states.switch.uttag6.state }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag6
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag6
 - platform: group
   name: Sänglampor
   entities:
