--- a/automations.yaml
+++ b/automations.yaml
@@ -462,10 +462,10 @@
     service: light.turn_off
 - id: '1640075647638'
   alias: Keep Tuya Alive
-  description: Keep tuya alive-reload every 30 minutes
+  description: Keep tuya alive-reload every 80 minutes
   trigger:
   - platform: time_pattern
-    minutes: /30
+    hours: /1
   condition: []
   action:
   - service: homeassistant.reload_config_entry
@@ -473,3 +473,12 @@
       entity_id:
       - switch.eluttag_framsidan
   mode: single
+- id: '2'
+  alias: "Slå på LG TV"
+  trigger:
+    - platform: webostv.turn_on
+      entity_id: media_player.lg_tv
+  action:
+    - service: wake_on_lan.send_magic_packet
+      data:
+        mac: !secret lg_mac_address
