--- a/switches.yaml
+++ b/switches.yaml
@@ -1,17 +1,17 @@
-- platform: template
-  switches:
-    heater_green_house:
-      friendly_name: "Värmare växthus"
-      value_template: '{{ states.switch.uttag5.state }}'
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.uttag5
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.uttag5
+#- platform: template
+#  switches:
+#    heater_green_house:
+#      friendly_name: "Värmare växthus"
+#      value_template: '{{ states('switch.uttag5') }}'
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag5
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag5
 #    tablet_power_adapter:
 #      friendly_name: "Laddare tablet"
-#      value_template: '{{ states.switch.uttag4.state }}'
+#      value_template: '{{ states('switch.uttag4') }}'
 #      turn_on:
 #        service: switch.turn_on
 #        entity_id: switch.uttag4
@@ -20,7 +20,7 @@
 #        entity_id: switch.uttag4
 #    onkyo_receiver:
 #       friendly_name: "Onkyo Receiver"
-#       value_template: '{{ states.switch.uttag5.state }}'
+#       value_template: '{{ states('switch.uttag5') }}'
 #      turn_on:
 #        service: switch.turn_on
 #        entity_id: switch.uttag5
