--- a/lights.yaml
+++ b/lights.yaml
@@ -18,24 +18,24 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.uttag5
-#    vitrine_diningroom:
-#      friendly_name: "Vitrinskåp matsal"
-#      value_template: "{{ states('switch.vitrinskap_switch') }}"
-#      turn_on:
-#        service: switch.turn_on
-#        entity_id: switch.vitrinskap_switch
-#      turn_off:
-#        service: switch.turn_off
-#        entity_id: switch.vitrinskap_switch
-    growing_light_dining_room:
-      friendly_name: "Växtlampa Matsal"
-      value_template: "{{ states('switch.shelly_plug_1') }}"
+    vitrine_diningroom:
+      friendly_name: "Vitrinskåp matsal"
+      value_template: "{{ states('switch.shelly_plug_2') }}"
       turn_on:
         service: switch.turn_on
-        entity_id: switch.shelly_plug_1
+        entity_id: switch.shelly_plug_2
       turn_off:
         service: switch.turn_off
-        entity_id: switch.shelly_plug_1
+        entity_id: switch.shelly_plug_2
+#    growing_light_dining_room:
+#      friendly_name: "Växtlampa Matsal"
+#      value_template: "{{ states('switch.shelly_plug_1') }}"
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.shelly_plug_1
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.shelly_plug_1
     light_terrace:
       friendly_name: "Ljusslinga altan"
       value_template: "{{ states('switch.ljusslinga_altan') }}"
@@ -45,8 +45,17 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.ljusslinga_altan
-    growing_light_laundry:
-      friendly_name: "Växtlampa tvättstuga"
+#    growing_light_laundry:
+#      friendly_name: "Växtlampa tvättstuga"
+#      value_template: "{{ states('switch.uttag4') }}"
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag4
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag4
+    window_light_dining_room:
+      friendly_name: "Fönsterlampa Matsal"
       value_template: "{{ states('switch.uttag4') }}"
       turn_on:
         service: switch.turn_on
@@ -54,33 +63,24 @@
       turn_off:
         service: switch.turn_off
         entity_id: switch.uttag4
-#    window_light_dining_room:
-#      friendly_name: "Fönsterlampa Matsal"
-#      value_template: "{{ states('switch.shelly_plug_1') }}"
+#    xmas_light_front:
+#      friendly_name: "Julbelysning framsida"
+#      value_template: "{{ states('switch.julbelysning_framsida') }}"
 #      turn_on:
 #        service: switch.turn_on
-#        entity_id: switch.shelly_plug_1
+#        entity_id: switch.julbelysning_framsida
 #      turn_off:
 #        service: switch.turn_off
-#        entity_id: switch.shelly_plug_1
-    xmas_light_front:
-      friendly_name: "Julbelysning framsida"
-      value_template: "{{ states('switch.julbelysning_framsida') }}"
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.julbelysning_framsida
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.julbelysning_framsida
-    growing_light_kitchen:
-      friendly_name: "Växtlampa kök"
-      value_template: "{{ states('switch.uttag3') }}"
-      turn_on:
-        service: switch.turn_on
-        entity_id: switch.uttag3
-      turn_off:
-        service: switch.turn_off
-        entity_id: switch.uttag3
+#        entity_id: switch.julbelysning_framsida
+#    growing_light_kitchen:
+#      friendly_name: "Växtlampa kök"
+#      value_template: "{{ states('switch.uttag3') }}"
+#      turn_on:
+#        service: switch.turn_on
+#        entity_id: switch.uttag3
+#      turn_off:
+#        service: switch.turn_off
+#        entity_id: switch.uttag3
 #    xmas_tree:
 #      friendly_name: "Julgran"
 #      value_template: "{{ states('switch.julgran') }}"
